# splines

./: .clang-format  .gitignore  .travis.yml  Base3DInterpolation.cpp  Base3DInterpolation.hpp  BaseInterpolator.cpp  BaseInterpolator.hpp  CMakeLists.txt  CubicInterpolator.cpp  CubicInterpolator.hpp  I3DInterpolation.h  I3DInterpolation.hpp  IInterpolator.hpp  Interpolator.pro  InterpolatorBuilder.cpp  InterpolatorBuilder.hpp  LICENSE  Linear3DInterpolation.cpp  Linear3DInterpolation.hpp  LinearInterpolator.cpp  LinearInterpolator.hpp  Makefile  MinimumCurvature3DInterpolation.cpp  MinimumCurvature3DInterpolation.hpp  MinimumCurvatureInterpolator.cpp  README.rst  TrajectoryBuilder.cpp  TrajectoryBuilder.hpp  Vertex.cpp  Vertex.hpp  build_bindings  environment.yml  fix_format.sh
.github/workflows/: linux.yml  windows.yml
_tests/: test_3d_interpolation.cpp
interpolator/bindings/: CMakeLists.txt
interpolator/bindings/src/: _interpolator.cpp
interpolator/cpp/: CMakeLists.txt
interpolator/cpp/_tests/: test_3d_interpolation.cpp
interpolator/cpp/include/interpolator/: BaseInterpolator.hpp  CubicInterpolator.hpp  IInterpolator.hpp  InterpolatorBuilder.hpp  InterpolatorFactory.hpp  LinearInterpolator.hpp  MinimumCurvatureInterpolator.hpp  Trajectory.hpp  Vertex.hpp  Vertices.hpp
interpolator/cpp/include/interpolator/utils/: Multithreading.hpp
interpolator/cpp/src/: BaseInterpolator.cpp  CubicInterpolator.cpp  InterpolatorBuilder.cpp  InterpolatorFactory.cpp  LinearInterpolator.cpp  MinimumCurvatureInterpolator.cpp  Trajectory.cpp  Vertex.cpp  Vertices.cpp
interpolator/python/_tests/: test_3d_interpolation.py
interpolator/python/_tests/test_3d_interpolation/: test_3d_interpolation_cubic_deg_.csv  test_3d_interpolation_cubic_rad_.csv  test_3d_interpolation_linear_deg_.csv  test_3d_interpolation_linear_rad_.csv  test_3d_interpolation_minimum_curvature_deg_.csv  test_3d_interpolation_minimum_curvature_rad_.csv
src/bindings/_interpolator/: _interpolator.cpp
src/cpp/interpolator/: InterpolatorBuilder.cpp  LinearInterpolator.cpp  MinimumCurvatureInterpolator.cpp  Vertex.cpp
src/cpp/interpolator/_tests/: test_3d_interpolation.cpp
src/python/interpolator/_tests/: test_sum.py
